# yx

./: .gitignore  BUILD_WORKFLOW.md  CLAUDE.md  INTEROP_STATUS.md  README.md
builds/: README.md
canonical/: README.md
canonical/python/: README.md  pyproject.toml
canonical/python/src/yx/: __init__.py
canonical/python/src/yx/primitives/: __init__.py  data_crypto.py  guid_factory.py
canonical/python/src/yx/transport/: __init__.py  packet.py  packet_builder.py  udp_socket.py
canonical/python/tests/: __init__.py  generate_canonical.py
canonical/python/tests/integration/: __init__.py  test_packet_flow.py
canonical/python/tests/unit/: __init__.py  test_data_crypto.py  test_guid_factory.py  test_packet.py  test_packet_builder.py  test_packet_parser.py  test_udp_send_receive.py  test_udp_socket.py
canonical/swift/: Package.swift  README.md  run_integration_tests.swift  validate_canonical.swift
canonical/test-vectors/: text-protocol-packets.json
docs/: README.md  ybs-framework-spec.md  ybs-overview.md
specs/: README.md
specs/architecture/: api-contracts.md  implementation-languages.md  protocol-layers.md  security-architecture.md
specs/technical/: default-values.md  yx-protocol-spec.md
specs/testing/: interoperability-requirements.md  testing-strategy.md
steps/: README.md  STEPS_ORDER.txt  ybs-step_000000000000.md
steps/python/: README.md  STEPS_ORDER.txt  ybs-step_a1b2c3d4e5f6.md  ybs-step_a2b3c4d5e6f7.md  ybs-step_b2c3d4e5f6a1.md  ybs-step_b3c4d5e6f7a2.md  ybs-step_c3d4e5f6a1b2.md  ybs-step_c4d5e6f7a2b3.md  (+9 more)
tests/: README.md
(+34 files in other folders)
